<resources>
    <string name="app_name">ImBored</string>
    <string name="button_addActivity">Add Activity</string>
    <string name="hint_activityTitle">Activity Title</string>
    <string name="hint_activityDescription">Description</string>
    <string name="menu_addActivity">Add Activity</string>
    <string name="menu_cancelActivity">Cancel Activity</string>
    <string name="hint_activityCategory">Select Category</string>
    <string name="enter_valid_title_category">Please enter a title and select a valid category</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_activity_image">Select activity image</string>
    <string name="change_activity_image">Change activity image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteActivity">Delete</string>
    <string name="title_activity_activities_maps">Map of All Activities</string>
    <string name="image_description">Image of an event</string>
    <string name="button_select_date">Select a Date</string>
    <string name="button_select_time">Select the time of activity</string>
    <string name="recurrence_hint">How often event held</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="date_and_time">Date and Time</string>
    <string name="change_location">Change Location</string>

    <string-array name="hint_select_category">Select Category</string-array>
    <string-array name="activity_categories">
        <item>Select Category</item> <!-- Hint option -->
        <item>Outdoors</item>
        <item>Sports</item>
        <item>Social</item>
    </string-array>

    <string-array name="recurrence_options">
        <item>One time Event</item>
        <item>Every Day</item>
        <item>Every Saturday</item>
        <item>Every Sunday</item>
        <item>Every Week</item>
        <item>Every Month</item>
    </string-array>


</resources>
